--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "test": "jest"
+    "dev": "tsx watch scripts/calc.ts",
+    "test": "jest",
+    "test-watch": "jest watch"
   },
   "keywords": [
     "algorithm",
